--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,4 @@ spring:
           driverClassName: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/nora?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
           username: root
-          password: password
+          password: root
