--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,17 @@
 server:
   port: 8100
+
 spring:
        datasource:
           driverClassName: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/nora?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
           username: root
-          password: password
+          password: root
+
+#       shiro:
+#         loginUrl: /account/page/401
+#         unauthorizedUrl: /account/page/403
+#         successUrl: /account/page/index
+
+#mybatis-plus:
+#  mapper-locations: classpath:mapper/*/*Mapper.xml
