--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
           driverClassName: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/nora?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
           username: root
-          password: root
+          password: password
 
 #       shiro:
 #         loginUrl: /account/page/401
@@ -15,3 +15,9 @@ spring:
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*/*Mapper.xml
+
+
+shiro:
+  loginUrl: /system/account/401
+  unauthorizedUrl: /system/account/403
+  successUrl: /system/account/index
